# mandelbrot-cpp

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  build.bat  buildAndRun.bat
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: Main.cpp  ScreenPlane.cpp  ScreenPlane.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/shaders/: mandelbrot.comp  mandelbrot.frag  mandelbrot.vert  shader.frag  shader.vert
